--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.pertemuankeduaevent">
+    package="com.example.pertemuankeduaevent" >
 
     <application
         android:allowBackup="true"
@@ -8,15 +8,17 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.PertemuanKeduaEvent">
+        android:theme="@style/Theme.PertemuanKeduaEvent" >
+        <activity
+            android:name=".Formmenu"
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".ActivityHasil"
-            android:exported="false"
             android:label="@string/label2"
-            android:parentActivityName=".ActivityHasil"/>
+            android:parentActivityName=".ActivityHasil" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
